--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-cszbar",
-  "version": "1.3.3",
+  "name": "cordova-plugin-cszbar-tecnosolve",
+  "version": "2.0.0",
   "description": "Plugin to integrate with the ZBar barcode scanning library.",
   "cordova": {
-    "id": "cordova-plugin-cszbar",
+    "id": "cordova-plugin-cszbar-tecnosolve",
     "platforms": [
       "android",
       "ios"
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tjwoon/csZBar.git"
+    "url": "git+https://github.com/Tecnosolve/csZBar.git"
   },
   "keywords": [
     "cszbar",
@@ -37,7 +37,7 @@
   "author": "TJ Woon <tj@cloudsky.org>",
   "license": "Apache 2.0",
   "bugs": {
-    "url": "https://github.com/tjwoon/csZBar/issues"
+    "url": "https://github.com/Tecnosolve/csZBar/issues"
   },
-  "homepage": "https://github.com/tjwoon/csZBar#readme"
+  "homepage": "https://github.com/Tecnosolve/csZBar#readme"
 }
