--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-cszbar-tecnosolve",
-  "version": "4.1.0",
+  "name": "@tecnosolve/cordova-plugin-cszbar",
+  "version": "4.2.0",
   "description": "Plugin to integrate with the ZBar barcode scanning library.",
   "cordova": {
-    "id": "cordova-plugin-cszbar-tecnosolve",
+    "id": "cordova-plugin-cszbar",
     "platforms": [
       "android",
       "ios"
